--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> DearScholars </title>
   <link rel="stylesheet" type="text/css" href="css/main.css" media="all" />
 </head>
